exports[`nbt primitive() > Parse '' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 0
    },
    "value": "",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": []
}
`;

exports[`nbt primitive() > Parse '1.23f' 1`] = `
{
  "node": {
    "type": "nbt:float",
    "range": {
      "start": 0,
      "end": 5
    },
    "value": 1.23
  },
  "errors": []
}
`;

exports[`nbt primitive() > Parse '1024L' 1`] = `
{
  "node": {
    "type": "nbt:long",
    "range": {
      "start": 0,
      "end": 5
    },
    "value": 1024
  },
  "errors": []
}
`;

exports[`nbt primitive() > Parse '123456b' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 7
    },
    "value": "123456b",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 7
      },
      "message": "This looks like a byte tag, but it is actually a string tag due to the numeral value being out of [-128, 127]",
      "severity": 2
    },
    {
      "range": {
        "start": 0,
        "end": 7
      },
      "message": "Unquoted strings cannot start with 1 in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() > Parse '1b' 1`] = `
{
  "node": {
    "type": "nbt:byte",
    "range": {
      "start": 0,
      "end": 2
    },
    "value": 1
  },
  "errors": []
}
`;

exports[`nbt primitive() > Parse '4.56' 1`] = `
{
  "node": {
    "type": "nbt:double",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": 4.56
  },
  "errors": []
}
`;

exports[`nbt primitive() > Parse '4.56d' 1`] = `
{
  "node": {
    "type": "nbt:double",
    "range": {
      "start": 0,
      "end": 5
    },
    "value": 4.56
  },
  "errors": []
}
`;

exports[`nbt primitive() > Parse '72s' 1`] = `
{
  "node": {
    "type": "nbt:short",
    "range": {
      "start": 0,
      "end": 3
    },
    "value": 72
  },
  "errors": []
}
`;

exports[`nbt primitive() > Parse '987' 1`] = `
{
  "node": {
    "type": "nbt:int",
    "range": {
      "start": 0,
      "end": 3
    },
    "value": 987
  },
  "errors": []
}
`;

exports[`nbt primitive() > Parse '999e999f' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 8
    },
    "value": "999e999f",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 8
      },
      "message": "This looks like a float tag, but it is actually a string tag due to the numeral value being out of [-3.4028234663852886e+38, 3.4028234663852886e+38]",
      "severity": 2
    },
    {
      "range": {
        "start": 0,
        "end": 8
      },
      "message": "Unquoted strings cannot start with 9 in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() > Parse '\"quoted\"' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 8
    },
    "value": "quoted",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 1,
          "end": 1
        }
      }
    ],
    "quote": "\\""
  },
  "errors": []
}
`;

exports[`nbt primitive() > Parse 'false' 1`] = `
{
  "node": {
    "type": "nbt:byte",
    "range": {
      "start": 0,
      "end": 5
    },
    "value": 0
  },
  "errors": []
}
`;

exports[`nbt primitive() > Parse 'true' 1`] = `
{
  "node": {
    "type": "nbt:byte",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": 1
  },
  "errors": []
}
`;

exports[`nbt primitive() > Parse 'unquoted' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 8
    },
    "value": "unquoted",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '+0f' 1`] = `
{
  "node": {
    "type": "nbt:float",
    "range": {
      "start": 0,
      "end": 3
    },
    "value": 0
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '+0xff' 1`] = `
{
  "node": {
    "type": "nbt:hex",
    "range": {
      "start": 0,
      "end": 5
    },
    "prefixRange": {
      "start": 1,
      "end": 3
    },
    "value": 255,
    "hover": "\`255\`"
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '+1b' 1`] = `
{
  "node": {
    "type": "nbt:byte",
    "range": {
      "start": 0,
      "end": 3
    },
    "value": 1
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '+42i' 1`] = `
{
  "node": {
    "type": "nbt:int",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": 42
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '+abc' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": "+abc",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 4
      },
      "message": "Unquoted strings cannot start with + in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '-0.3' 1`] = `
{
  "node": {
    "type": "nbt:double",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": -0.3
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '-02.4' 1`] = `
{
  "node": {
    "type": "nbt:double",
    "range": {
      "start": 0,
      "end": 5
    },
    "value": -2.4
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '-0xff' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 5
    },
    "value": "-0xff",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 5
      },
      "message": "Negative hexadecimal/binary numeric literals are not supported",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '-3.14' 1`] = `
{
  "node": {
    "type": "nbt:double",
    "range": {
      "start": 0,
      "end": 5
    },
    "value": -3.14
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '-42I' 1`] = `
{
  "node": {
    "type": "nbt:int",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": -42
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '-abc' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": "-abc",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 4
      },
      "message": "Unquoted strings cannot start with - in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '.abc' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": ".abc",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 4
      },
      "message": "Unquoted strings cannot start with . in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '0' 1`] = `
{
  "node": {
    "type": "nbt:int",
    "range": {
      "start": 0,
      "end": 1
    },
    "value": 0
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '0.3' 1`] = `
{
  "node": {
    "type": "nbt:double",
    "range": {
      "start": 0,
      "end": 3
    },
    "value": 0.3
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '01' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 2
    },
    "value": "01",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 2
      },
      "message": "Unquoted strings cannot start with 0 in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '01d' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 3
    },
    "value": "01d",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 3
      },
      "message": "Unquoted strings cannot start with 0 in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '01e5' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": "01e5",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 4
      },
      "message": "Unquoted strings cannot start with 0 in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '01f' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 3
    },
    "value": "01f",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 3
      },
      "message": "Unquoted strings cannot start with 0 in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '04.1' 1`] = `
{
  "node": {
    "type": "nbt:double",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": 4.1
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '0b' 1`] = `
{
  "node": {
    "type": "nbt:byte",
    "range": {
      "start": 0,
      "end": 2
    },
    "value": 0
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '0b101' 1`] = `
{
  "node": {
    "type": "nbt:bin",
    "range": {
      "start": 0,
      "end": 5
    },
    "prefixRange": {
      "start": 0,
      "end": 2
    },
    "value": 5,
    "hover": "\`5\`"
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '0b1010_1010' 1`] = `
{
  "node": {
    "type": "nbt:bin",
    "range": {
      "start": 0,
      "end": 11
    },
    "prefixRange": {
      "start": 0,
      "end": 2
    },
    "value": 170,
    "hover": "\`170\`"
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '0b101l' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 6
    },
    "value": "0b101l",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 6
      },
      "message": "Unquoted strings cannot start with 0 in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '0i' 1`] = `
{
  "node": {
    "type": "nbt:int",
    "range": {
      "start": 0,
      "end": 2
    },
    "value": 0
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '0x' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 2
    },
    "value": "0x",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 2
      },
      "message": "Unquoted strings cannot start with 0 in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '0xFF' 1`] = `
{
  "node": {
    "type": "nbt:hex",
    "range": {
      "start": 0,
      "end": 4
    },
    "prefixRange": {
      "start": 0,
      "end": 2
    },
    "value": 255,
    "hover": "\`255\`"
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '0xFF_FF' 1`] = `
{
  "node": {
    "type": "nbt:hex",
    "range": {
      "start": 0,
      "end": 7
    },
    "prefixRange": {
      "start": 0,
      "end": 2
    },
    "value": 65535,
    "hover": "\`65535\`"
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '0xff' 1`] = `
{
  "node": {
    "type": "nbt:hex",
    "range": {
      "start": 0,
      "end": 4
    },
    "prefixRange": {
      "start": 0,
      "end": 2
    },
    "value": 255,
    "hover": "\`255\`"
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '0xffb' 1`] = `
{
  "node": {
    "type": "nbt:hex",
    "range": {
      "start": 0,
      "end": 5
    },
    "prefixRange": {
      "start": 0,
      "end": 2
    },
    "value": 4091,
    "hover": "\`4091\`"
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '1.5_3' 1`] = `
{
  "node": {
    "type": "nbt:double",
    "range": {
      "start": 0,
      "end": 5
    },
    "value": 1.53
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '1.5_3e2' 1`] = `
{
  "node": {
    "type": "nbt:double",
    "range": {
      "start": 0,
      "end": 7
    },
    "value": 153
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '1._5' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": "1._5",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 4
      },
      "message": "Unquoted strings cannot start with 1 in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '100_' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": "100_",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 4
      },
      "message": "Unquoted strings cannot start with 1 in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '1_.5' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": "1_.5",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 4
      },
      "message": "Unquoted strings cannot start with 1 in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '1_000' 1`] = `
{
  "node": {
    "type": "nbt:int",
    "range": {
      "start": 0,
      "end": 5
    },
    "value": 1000
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '1_000_000' 1`] = `
{
  "node": {
    "type": "nbt:int",
    "range": {
      "start": 0,
      "end": 9
    },
    "value": 1000000
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '1_000b' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 6
    },
    "value": "1_000b",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 6
      },
      "message": "This looks like a byte tag, but it is actually a string tag due to the numeral value being out of [-128, 127]",
      "severity": 2
    },
    {
      "range": {
        "start": 0,
        "end": 6
      },
      "message": "Unquoted strings cannot start with 1 in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '1_000l' 1`] = `
{
  "node": {
    "type": "nbt:long",
    "range": {
      "start": 0,
      "end": 6
    },
    "value": 1000
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '1_000s' 1`] = `
{
  "node": {
    "type": "nbt:short",
    "range": {
      "start": 0,
      "end": 6
    },
    "value": 1000
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '1_5e2' 1`] = `
{
  "node": {
    "type": "nbt:double",
    "range": {
      "start": 0,
      "end": 5
    },
    "value": 1500
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '1__000' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 6
    },
    "value": "1__000",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 6
      },
      "message": "Unquoted strings cannot start with 1 in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '1abc' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": "1abc",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 4
      },
      "message": "Unquoted strings cannot start with 1 in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '2147483647i' 1`] = `
{
  "node": {
    "type": "nbt:int",
    "range": {
      "start": 0,
      "end": 11
    },
    "value": 2147483647
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '42' 1`] = `
{
  "node": {
    "type": "nbt:int",
    "range": {
      "start": 0,
      "end": 2
    },
    "value": 42
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '42I' 1`] = `
{
  "node": {
    "type": "nbt:int",
    "range": {
      "start": 0,
      "end": 3
    },
    "value": 42
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '42bi' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": "42bi",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 4
      },
      "message": "Unquoted strings cannot start with 4 in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '42i' 1`] = `
{
  "node": {
    "type": "nbt:int",
    "range": {
      "start": 0,
      "end": 3
    },
    "value": 42
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '42li' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": "42li",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 4
      },
      "message": "Unquoted strings cannot start with 4 in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '42si' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": "42si",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 4
      },
      "message": "Unquoted strings cannot start with 4 in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '\".abc\"' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 6
    },
    "value": ".abc",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 1,
          "end": 1
        }
      }
    ],
    "quote": "\\""
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '\"42\"' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": "42",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 1,
          "end": 1
        }
      }
    ],
    "quote": "\\""
  },
  "errors": []
}
`;

exports[`nbt primitive() with pack format 71+ (1.21.5+) > Parse '_100' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": "_100",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": []
}
`;

exports[`nbt primitive() with pre-1.21.5 (no _ or i suffix) > Parse '0b101' 1`] = `
{
  "node": {
    "type": "nbt:bin",
    "range": {
      "start": 0,
      "end": 5
    },
    "prefixRange": {
      "start": 0,
      "end": 2
    },
    "value": 5,
    "hover": "\`5\`"
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 5
      },
      "message": "Hexadecimal/binary numeric literals are only valid in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pre-1.21.5 (no _ or i suffix) > Parse '0x1d' 1`] = `
{
  "node": {
    "type": "nbt:hex",
    "range": {
      "start": 0,
      "end": 4
    },
    "prefixRange": {
      "start": 0,
      "end": 2
    },
    "value": 29,
    "hover": "\`29\`"
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 4
      },
      "message": "Hexadecimal/binary numeric literals are only valid in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pre-1.21.5 (no _ or i suffix) > Parse '0xFF_FF' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 7
    },
    "value": "0xFF_FF",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 7
      },
      "message": "Hexadecimal/binary numeric literals are only valid in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    },
    {
      "range": {
        "start": 0,
        "end": 7
      },
      "message": "Underscore digit separators are only valid in data pack format 71+ / minecraft 1.21.5",
      "severity": 1
    }
  ]
}
`;

exports[`nbt primitive() with pre-1.21.5 (no _ or i suffix) > Parse '1_000' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 5
    },
    "value": "1_000",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 5
      },
      "message": "Underscore digit separators are only valid in data pack format 71+ / minecraft 1.21.5",
      "severity": 1
    }
  ]
}
`;

exports[`nbt primitive() with pre-1.21.5 (no _ or i suffix) > Parse '3iabc' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 5
    },
    "value": "3iabc",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": []
}
`;

exports[`nbt primitive() with pre-1.21.5 (no _ or i suffix) > Parse '42I' 1`] = `
{
  "node": {
    "type": "nbt:int",
    "range": {
      "start": 0,
      "end": 3
    },
    "value": 42
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 3
      },
      "message": "Explicit \`i\`/\`I\` integer suffix is only valid in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pre-1.21.5 (no _ or i suffix) > Parse '42i' 1`] = `
{
  "node": {
    "type": "nbt:int",
    "range": {
      "start": 0,
      "end": 3
    },
    "value": 42
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 3
      },
      "message": "Explicit \`i\`/\`I\` integer suffix is only valid in data pack format 71+ / minecraft 1.21.5",
      "severity": 3
    }
  ]
}
`;

exports[`nbt primitive() with pre-1.21.5 (no _ or i suffix) > Parse 'ab3i' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": "ab3i",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": []
}
`;

exports[`nbt primitive() with pre-1.21.5 (no _ or i suffix) > Parse 'abcI' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": "abcI",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": []
}
`;

exports[`nbt primitive() with pre-1.21.5 (no _ or i suffix) > Parse 'abci' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": "abci",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": []
}
`;

exports[`nbt primitive() with pre-1.21.5 (no gating) > Parse '+abc' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": "+abc",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": []
}
`;

exports[`nbt primitive() with pre-1.21.5 (no gating) > Parse '-abc' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": "-abc",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": []
}
`;

exports[`nbt primitive() with pre-1.21.5 (no gating) > Parse '.abc' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": ".abc",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": []
}
`;

exports[`nbt primitive() with pre-1.21.5 (no gating) > Parse '01' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 2
    },
    "value": "01",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": []
}
`;

exports[`nbt primitive() with pre-1.21.5 (no gating) > Parse '01f' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 3
    },
    "value": "01f",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": []
}
`;

exports[`nbt primitive() with pre-1.21.5 (no gating) > Parse '04.1' 1`] = `
{
  "node": {
    "type": "nbt:double",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": 4.1
  },
  "errors": []
}
`;

exports[`nbt primitive() with pre-1.21.5 (no gating) > Parse '1abc' 1`] = `
{
  "node": {
    "type": "nbt:string",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": "1abc",
    "valueMap": [
      {
        "inner": {
          "start": 0,
          "end": 0
        },
        "outer": {
          "start": 0,
          "end": 0
        }
      }
    ]
  },
  "errors": []
}
`;
